--- a/App/KoerekortApp/package.json
+++ b/App/KoerekortApp/package.json
@@ -20,6 +20,7 @@
     "@capacitor/ios": "^7.4.3",
     "@ionic/vue": "^8.7.7",
     "@ionic/vue-router": "^8.7.7",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
