--- a/Python-code/docker-compose.yml
+++ b/Python-code/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.9'
 services:
   webserver:
     build:
-      context: ..                              # repo root
-      dockerfile: Python-code/Billedgenkendelse/Dockerfile
+      context: .                              # repo root
+      dockerfile: /Billedgenkendelse/Dockerfile
     container_name: python_api
     ports:
       - "5001:5001"
