--- a/Python-code/Billedegenkendelse/Dockerfile
+++ b/Python-code/Billedegenkendelse/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11.14-alpine3.22
 
-WORKDIR /
+WORKDIR Python-code/Billedegenkendelse/Dockerfile
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
