--- a/Python-code/Billedegenkendelse/Dockerfile
+++ b/Python-code/Billedegenkendelse/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11.14-alpine3.22
 
-WORKDIR Python-code/Billedegenkendelse/Dockerfile
+WORKDIR /
 
-COPY requirements.txt ./
+COPY requirements.txt ./Python-code/Billedegenkendelse/Dockerfile
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
