--- a/Python-code/Billedegenkendelse/Dockerfile
+++ b/Python-code/Billedegenkendelse/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.11.14-alpine3.22
 
 WORKDIR /
 
-COPY requirements.txt ./Python-code/Billedegenkendelse/Dockerfile
+COPY Python-code/Billedegenkendelse/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
