Update Docker setup for Billedegenkendelse API
Switch to python:3.11-slim for compatibility with mediapipe and torch, add system dependencies for OpenCV, improve Dockerfile layer caching, and expose Flask port. Update docker-compose.yml to rename service, adjust build context, add environment variables for predictable CPU behavior, and suggest model mounting via volumes.

--- a/Python-code/Billedegenkendelse/Dockerfile
+++ b/Python-code/Billedegenkendelse/Dockerfile
@@ -1,10 +1,29 @@
-FROM python:3.11.14-alpine3.22
+# 1) Use glibc-based image so mediapipe & torch wheels work
+FROM python:3.11-slim
 
-WORKDIR /
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1
 
-COPY Python-code/Billedegenkendelse/requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+# 2) System deps needed for opencv-python (headless) etc.
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgl1 libglib2.0-0 \
+ && rm -rf /var/lib/apt/lists/*
 
-COPY . .
+# 3) Workdir is the project root for this service
+WORKDIR /app
 
-CMD [ "python", "./application.py" ]
+# 4) Copy only requirements first (better layer caching)
+#    NOTE: path is from the *build context* (Python-code)
+COPY Billedegenkendelse/requirements.txt /app/requirements.txt
+
+# 5) Install deps. Pin mediapipe to a version that supports py3.11 wheels.
+RUN pip install --upgrade pip \
+ && pip install -r /app/requirements.txt
+
+# 6) Copy the rest of the code (models, logic, app, etc.)
+COPY . /app
+
+# 7) Expose Flask port and run the API
+EXPOSE 5001
+CMD ["python", "Billedegenkendelse/application.py"]
