Update Dockerfile and compose for YOLO settings and models
Set ULTRALYTICS_SETTINGS_DIR to suppress YOLO warnings, adjust working directory for model paths, and clarify model mounting in Dockerfile and docker-compose.yml. Added external network configuration to docker-compose for compatibility.

--- a/Python-code/Billedegenkendelse/Dockerfile
+++ b/Python-code/Billedegenkendelse/Dockerfile
@@ -1,29 +1,29 @@
-# 1) Use glibc-based image so mediapipe & torch wheels work
 FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1
+    PIP_NO_CACHE_DIR=1 \
+    ULTRALYTICS_SETTINGS_DIR=/app/.ultralytics  # quiets the YOLO settings message by giving it a home
 
-# 2) System deps needed for opencv-python (headless) etc.
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libgl1 libglib2.0-0 \
  && rm -rf /var/lib/apt/lists/*
 
-# 3) Workdir is the project root for this service
+# Build context is Python-code, so paths start there
 WORKDIR /app
 
-# 4) Copy only requirements first (better layer caching)
-#    NOTE: path is from the *build context* (Python-code)
 COPY Billedegenkendelse/requirements.txt /app/requirements.txt
+RUN pip install --upgrade pip && pip install -r /app/requirements.txt
 
-# 5) Install deps. Pin mediapipe to a version that supports py3.11 wheels.
-RUN pip install --upgrade pip \
- && pip install -r /app/requirements.txt
-
-# 6) Copy the rest of the code (models, logic, app, etc.)
+# Copy the whole Python-code tree into /app
 COPY . /app
 
-# 7) Expose Flask port and run the API
+# IMPORTANT: run from the Billedegenkendelse folder so relative 'models/...' works
+WORKDIR /app/Billedegenkendelse
+
+# (Optional) ensure models are present in the image:
+# If your repo contains the files below under Billedegenkendelse/models, you're done.
+# If not, mount them as a volume (see docker-compose below).
+
 EXPOSE 5001
-CMD ["python", "Billedegenkendelse/application.py"]
+CMD ["python", "application.py"]
