Remove IDE config files and update .gitignore
Deleted .idea project files for Billedegenkendelse and added them to .gitignore to prevent future commits of IDE-specific configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -930,3 +930,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/csharp,visualstudio
+Python-code/Billedegenkendelse/.idea/Billedegenkendelse.iml
+Python-code/Billedegenkendelse/.idea/misc.xml
