--- a/.gitignore
+++ b/.gitignore
@@ -936,3 +936,4 @@ Python-code/Billedegenkendelse/.idea/Billedegenkendelse.iml
 Python-code/Billedegenkendelse/.idea/misc.xml
 Python-code/.idea/misc.xml
 Python-code/.idea/Python-code.iml
+GEMINI.md
